Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Code2code by nnn-dev</title>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Code2code : An Eclipse plugin to generate source code files using popular template engines" />
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Code2code</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Code2code</h1>
-        <p>An Eclipse plugin to generate source code files using popular template engines</p>
 
-        <p class="view"><a href="https://github.com/nnn-dev/code2code">View the Project on GitHub <small>nnn-dev/code2code</small></a></p>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/nnn-dev/code2code">View on GitHub</a>
 
+          <h1 id="project_title">Code2code</h1>
+          <h2 id="project_tagline">An Eclipse plugin to generate source code files using popular template engines</h2>
 
-        <ul>
-          <li><a href="https://github.com/nnn-dev/code2code/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/nnn-dev/code2code/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/nnn-dev/code2code">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/nnn-dev/code2code/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/nnn-dev/code2code/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>
 <a name="what-it-is" class="anchor" href="#what-it-is"><span class="octicon octicon-link"></span></a>What it is</h1>
 
@@ -79,7 +82,7 @@ nnn.code2code is a fork of <a href="https://github.com/srizzo/code2code">code2co
 <h1>
 <a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h1>
 
-<p>Current version is 0.10.0, tested against Eclipse Kepler SR1.</p>
+<p>Current version is 0.10.3, tested against Eclipse Kepler SR1.</p>
 
 <p>You can install it from the <a href="http://nnn-dev.github.com/code2code/updatesite">Update Site</a></p>
 
@@ -98,12 +101,17 @@ nnn.code2code is a fork of <a href="https://github.com/srizzo/code2code">code2co
 
 <p><a href="http://github.com/nnn-dev/code2code-example-generators/downloads">http://github.com/nnn-dev/code2code-example-generators/downloads</a></p>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/nnn-dev">nnn-dev</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Code2code maintained by <a href="https://github.com/nnn-dev">nnn-dev</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
+
   </body>
 </html>
