Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -94,12 +94,14 @@ nnn.code2code is a fork of <a href="https://github.com/srizzo/code2code">code2co
 <p>Inner params:</p>
 
 <ul>
-<li>eclipse_project_name : name of selected project</li>
-<li>eclipse_project_path : path of selected project</li>
+<li>eclipse_project_name  : name of selected project</li>
+<li>eclipse_project_path  : path of selected project</li>
+<li>eclipse_plugin_name   : name of this plugin</li>
+<li>eclipse_plugin_version : version of this plugin</li>
 </ul><h1>
 <a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h1>
 
-<p>Current version is 0.10.6, tested against Eclipse Kepler SR1.</p>
+<p>Current version is 0.10.6, tested against Eclipse Kepler SR1 and Eclipse Luna.</p>
 
 <p>You can install it from the <a href="http://nnn-dev.github.com/code2code/updatesite">Update Site</a></p>
 
