Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Code2code : An Eclipse plugin to generate source code files using popular template engines" />
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="Code2code : An Eclipse plugin to generate source code files using popular template engines">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -32,7 +32,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
-<a name="what-it-is" class="anchor" href="#what-it-is"><span class="octicon octicon-link"></span></a>What it is</h1>
+<a id="what-it-is" class="anchor" href="#what-it-is" aria-hidden="true"><span class="octicon octicon-link"></span></a>What it is</h1>
 
 <p>(nnn.)code2code is an eclipse plugin to generate source code from templates.</p>
 
@@ -44,7 +44,7 @@
 nnn.code2code is a fork of <a href="https://github.com/srizzo/code2code">code2code</a> with extra features (save/load parameters, allow overwride)</p>
 
 <h1>
-<a name="creating-a-generator" class="anchor" href="#creating-a-generator"><span class="octicon octicon-link"></span></a>Creating a Generator</h1>
+<a id="creating-a-generator" class="anchor" href="#creating-a-generator" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating a Generator</h1>
 
 <p>The files:</p>
 
@@ -83,7 +83,7 @@ nnn.code2code is a fork of <a href="https://github.com/srizzo/code2code">code2co
 </code></pre>
 
 <h1>
-<a name="usage" class="anchor" href="#usage"><span class="octicon octicon-link"></span></a>Usage</h1>
+<a id="usage" class="anchor" href="#usage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Usage</h1>
 
 <p><strong>Installing generators:</strong> just create a folder named "generators" at the root of your project, and place your generators there.</p>
 
@@ -98,25 +98,27 @@ nnn.code2code is a fork of <a href="https://github.com/srizzo/code2code">code2co
 <li>eclipse_project_path  : path of selected project</li>
 <li>eclipse_plugin_name   : name of this plugin</li>
 <li>eclipse_plugin_version : version of this plugin</li>
-</ul><h1>
-<a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h1>
+</ul>
 
-<p>Current version is 0.10.6, tested against Eclipse Kepler SR1 and Eclipse Luna.</p>
+<h1>
+<a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h1>
+
+<p>Current version is 0.10.7, tested against Eclipse Kepler SR2.</p>
 
 <p>You can install it from the <a href="http://nnn-dev.github.com/code2code/updatesite">Update Site</a></p>
 
 <h1>
-<a name="documentation" class="anchor" href="#documentation"><span class="octicon octicon-link"></span></a>Documentation</h1>
+<a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Documentation</h1>
 
 <p><a href="http://wiki.github.com/nnn-dev/code2code">http://wiki.github.com/nnn-dev/code2code</a></p>
 
 <h1>
-<a name="issuesfeatures" class="anchor" href="#issuesfeatures"><span class="octicon octicon-link"></span></a>Issues/Features</h1>
+<a id="issuesfeatures" class="anchor" href="#issuesfeatures" aria-hidden="true"><span class="octicon octicon-link"></span></a>Issues/Features</h1>
 
 <p><a href="http://github.com/nnn-dev/code2code/issues">http://github.com/nnn-dev/code2code/issues</a></p>
 
 <h1>
-<a name="generator-examples" class="anchor" href="#generator-examples"><span class="octicon octicon-link"></span></a>Generator Examples</h1>
+<a id="generator-examples" class="anchor" href="#generator-examples" aria-hidden="true"><span class="octicon octicon-link"></span></a>Generator Examples</h1>
 
 <p><a href="http://github.com/nnn-dev/code2code-example-generators/downloads">http://github.com/nnn-dev/code2code-example-generators/downloads</a></p>
       </section>
